apps/n8n/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    traefik.ingress.kubernetes.io/router.entrypoints: 'websecure'
spec:
  ingressClassName: traefik
  rules:
    - host: ns3098488.ip-54-36-172.eu
      http:
        paths:
          - path: /n8n
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
  tls:
    - hosts:
        - ns3098488.ip-54-36-172.eu
      secretName: n8n-tls
